--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
 environment.sh
+MNH-V*
+libraries/build_netcdf-*
+libraries/hdf5-*
+libraries/libaec-*
+libraries/netcdf-c-*
+libraries/netcdf-fortran-*
+oasis3-mct_*
