--- a/environment/turpan/compilation_xios/arch-TURPAN.env
+++ b/environment/turpan/compilation_xios/arch-TURPAN.env
@@ -1,7 +1,8 @@
 module purge
 module load nvidia
-module load nvhpc/22.11
+module load nvhpc/24.11-openmpi.4.1.5
+module load cmake/3.25.1
 
-export PATH=/usr/local/nvidia/nvhpc/Linux_aarch64/22.11/comm_libs/mpi/bin:$PATH
-export LD_LIBRARY_PATH=/usr/local/nvidia/nvhpc/Linux_aarch64/22.11/comm_libs/mpi/lib:$LD_LIBRARY_PATH
+export PATH=/usr/local/nvidia/nvhpc/Linux_aarch64/24.11/comm_libs/11.8/openmpi4/openmpi-4.1.5/bin:$PATH
+export LD_LIBRARY_PATH=/usr/local/nvidia/nvhpc/Linux_aarch64/24.11/comm_libs/11.8/openmpi4/openmpi-4.1.5/lib:$LD_LIBRARY_PATH
 
